--- a/Algorithmic.Mobile/Properties/launchSettings.json
+++ b/Algorithmic.Mobile/Properties/launchSettings.json
@@ -1,8 +1,6 @@
 {
-  "profiles":
-  {
-    "Windows Machine":
-    {
+  "profiles": {
+    "Windows Machine": {
       "commandName": "MsixPackage",
       "nativeDebugging": false
     }
