--- a/Algorithmic.Mobile/Algorithmic.Mobile.csproj
+++ b/Algorithmic.Mobile/Algorithmic.Mobile.csproj
@@ -37,12 +37,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
 		<PackageReference Include="DevExpress.Maui.Charts" Version="22.1.6" />
 		<PackageReference Include="DevExpress.Maui.CollectionView" Version="22.1.6" />
 		<PackageReference Include="DevExpress.Maui.Editors" Version="22.1.6" />
 		<PackageReference Include="DevExpress.Maui.Core" Version="22.1.6" />
 		<PackageReference Include="DevExpress.Maui.DataGrid" Version="22.1.6" />
 		<PackageReference Include="DevExpress.Maui.Scheduler" Version="22.1.6" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Library.October.2022\Algorithmic.Library\Algorithmic.Library.csproj" />
 	</ItemGroup>
 
 	<PropertyGroup>
