--- a/Algorithmic.Mobile/Algorithmic.Mobile.csproj
+++ b/Algorithmic.Mobile/Algorithmic.Mobile.csproj
@@ -37,16 +37,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Remove="Resources\Images\clock.svg" />
-	  <None Remove="Resources\Images\clock_dark.svg" />
-	  <None Remove="Resources\Images\home.svg" />
-	  <None Remove="Resources\Images\home_dark.svg" />
-	  <None Remove="Resources\Images\settings.svg" />
-	  <None Remove="Resources\Images\settings_dark.svg" />
-	  <None Remove="Resources\Images\share.svg" />
-	  <None Remove="Resources\Images\share_dark.svg" />
-	  <None Remove="Resources\Images\together.svg" />
-	  <None Remove="Resources\Images\together_dark.svg" />
+	  <None Remove="Resources\Fonts\OpenSans-Semibold.ttf" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -58,6 +49,7 @@
 		<PackageReference Include="DevExpress.Maui.Core" Version="22.1.6" />
 		<PackageReference Include="DevExpress.Maui.DataGrid" Version="22.1.6" />
 		<PackageReference Include="DevExpress.Maui.Scheduler" Version="22.1.6" />
+		<PackageReference Include="Microsoft.Maui.Controls.Maps" Version="7.0.49" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -72,6 +64,9 @@
 			<DesignTime>True</DesignTime>
 			<AutoGen>True</AutoGen>
 			<DependentUpon>Resources.resx</DependentUpon>
+		</Compile>
+		<Compile Update="Shells\DeskTopShell.xaml.cs">
+		  <DependentUpon>DeskTopShell.xaml</DependentUpon>
 		</Compile>
 		<Compile Update="Views\BalancesView.xaml.cs">
 		  <DependentUpon>BalancesView.xaml</DependentUpon>
@@ -89,6 +84,9 @@
 		<MauiXaml Update="Pages\AccountsPage.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="Pages\MapPage.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="Pages\StocksPage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
@@ -97,6 +95,9 @@
 		</MauiXaml>
 		<MauiXaml Update="Resources\Styles\Styles.xaml">
 			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="Shells\DeskTopShell.xaml">
+		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
 		<MauiXaml Update="Shells\MobileShell.xaml">
 			<Generator>MSBuild:Compile</Generator>
